--- a/TOS.html
+++ b/TOS.html
@@ -39,14 +39,14 @@
     <!-- ========== Loading Page ========== -->
     <div class="preloader">
         <span class="percent">0</span>
-        <span class="loading-text text-uppercase">Loading ...</span>
+        <span class="loading-text text-uppercase">Opening Documents</span>
         <div class="preloader-bar">
             <div class="preloader-progress"></div>
         </div>
 
         <h1 class="title v-middle">
-            <span class="text-strok">Rudy</span>
-            <span class="text-fill">Rudy</span>
+            <span class="text-strok">RUUUDY</span>
+            <span class="text-fill">RUUUDY</span>
         </h1>
     </div>
     <!-- ========== End Loading Page ========== -->
