--- a/index.html
+++ b/index.html
@@ -547,6 +547,26 @@
                                 </div>
                                 <!-- ========== IMAGE END ========== -->
 
+                               <!--  ========== IMAGE: Frieren ========== -->
+                                <div class="folio-item work-item mt-80 dsn-col-md-2 dsn-col-lg-3 Product column landscape fanart" data-aos="fade-up">
+                                    <div class="has-popup box-img before-z-index z-index-0 p-relative over-hidden folio-item__thumb"
+                                        data-overlay="0">
+                                        <a class="  folio-item__thumb-link box-img" target=”blank” href="assets\Artworks NEW\makima15.png" title="Makima" data-size="905x1280">
+                                         <img class="cover-bg-img " src="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw==" data-dsn-src="assets\Artworks NEW\makima15.png" alt="Makima" >
+                                        </a>
+                                    </div>
+
+                                    <div class="folio-item__info">
+                                        <div class="folio-item__cat">illustration/FanArt (click to view full)</div>
+                                        <h4 class="folio-item__title">Makima!</h4>
+                                     </div>
+                                     <a target=”blank” href="https://x.com/shirozu07/status/1851824966611996909" title="Twitter" class="folio-item__project-link">Twitter</a>
+                                     <div class="folio-item__caption">
+                                        <p>Makima</p>
+                                    </div>
+                                </div>
+                                <!-- ========== IMAGE END ========== -->
+
                                  <!-- ========== IMAGE: Moona ========== -->
                                  <div class="folio-item work-item mt-80 dsn-col-md-2 dsn-col-lg-3 Product column bikini moona vtube" data-aos="fade-up">
                                     <div class="has-popup box-img before-z-index z-index-0 p-relative over-hidden folio-item__thumb"
@@ -566,6 +586,26 @@
                                     </div>
                                 </div>
                                 <!-- ========== IMAGE END ========== -->
+
+                                 <div class="folio-item work-item mt-80 dsn-col-md-2 dsn-col-lg-3 Product column  comm" data-aos="fade-up">
+                                    <div class="has-popup box-img before-z-index z-index-0 p-relative over-hidden folio-item__thumb"
+                                        data-overlay="0">
+                                        <a class="  folio-item__thumb-link" target=”blank” href="assets\Artworks NEW\popup_highres\1- SpuzTay(Chun-li)-m export.jpg" title="Asuna" data-size="905x1280">
+                                         <img class="cover-bg-img" src="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw==" data-dsn-src="assets\Artworks NEW\1- SpuzTay(Chun-li)-m export.jpg" alt="">
+                                        </a>
+                                    </div>
+                                    <div class="folio-item__info">
+                                        <div class="folio-item__cat">illustration/FanArt 2023</div>
+                                        <h4 class="folio-item__title"> Chun li!</h4>
+                                     </div>
+                                     <a target=”blank” href="https://x.com/shirozu07/status/1827947780108669309" title="Twitter" class="folio-item__project-link">Twitter</a>
+                                     <div class="folio-item__caption">
+                                        <p>Chun Li</p>
+                                    </div>
+                                    
+                                </div>
+
+                                 <!-- ========== IMAGE END ========== -->
                                 
                                 <div class="folio-item work-item mt-80 dsn-col-md-2 dsn-col-lg-3 Product column  fanart" data-aos="fade-up">
                                     <div class="has-popup box-img before-z-index z-index-0 p-relative over-hidden folio-item__thumb"
