--- a/TOS.html
+++ b/TOS.html
@@ -90,7 +90,6 @@
                     </a>
 
 
-
                     <li>
                         <a href="TOS.html">
                             <span class="dsn-title-menu">Terms and Service</span>
@@ -199,11 +198,13 @@
                                 </div>
 
                                 <div class="service-description">
-                                    <h4 class="title-block mb-15">Payment</h4>
-                                    <p class="max-w750">Currency accepted is USD and can be paid through PayPal or any payment getway such as Kofi.<br><br> The price range represents the general estimated price of a commission. Depending on the complexity, prices may be
-                                        higher than the price range on the commission sheet or site. For example, if the full illustration price is 200, and the character is complex it may go over 300<br><br> Commissions can be paid either 100% upfront
-                                        or split 50% upfront and 50% after sketch approval.<br><br>•Do not send me any payment before I have agreed to give you an open slot and requested you to send me the payment </p>
-                                </div>
+    <h4 class="title-block mb-15">Payment</h4>
+    <p class="max-w750">Currency accepted is USD and can be paid through PayPal or any payment gateway such as Kofi.<br><br>
+        The price range represents the general estimated price of a commission. Depending on the complexity, prices may be higher than the price range on the commission sheet or site. For example, if the full illustration price is 200, and the character is complex it may go over 300.<br><br>
+        Commissions can be paid either 100% upfront or split 50% upfront and 50% after sketch approval.<br><br>
+        • Do not send me any payment before I have agreed to give you an open slot and requested you to send me the payment.
+    </p>
+</div>
                             </div>
 
                             <div class="service-lest-item p-relative d-flex border-bottom">
@@ -381,7 +382,7 @@
                         target="_blank"
                         rel="nofollow"
                         href='https://twitter.com/intent/follow?original_referer=https%3A%2F%2Fpublish.twitter.com%2F&screen_name=shirozu07'
-                        >Kiroki Shirozu</a>
+                        >RUUUDY</a>
 
                                                 </h5>
                                     </div>
