--- a/comminfo.html
+++ b/comminfo.html
@@ -211,36 +211,33 @@
                        
                     </section>
                     <!--List end-->
-                    <section class="about-section-2 p-relative section-margin" >
-                        <div class="container">
-                            <div class="row">
-                                <div class="col-12">
-                                    <p class="sub-heading line-shap line-shap-before mb-15">
-                                        <span class="line-bg-right">
-                                            What I Do
-                                        </span>
+                <br>   
+    <div class="container">
+        <div class="row">
+            <div class="col-12">
+                <p class="sub-heading line-shap line-shap-before mb-15">
+                    <span class="line-bg-right">
+                        What I Do
+                    </span>
+                </p>
+            </div>
+            <div class="col-lg-6">
+                <div class="box-left">
+                    <div class="section-title">
+                        <h4>Drawing, illustrations and Concept work</h4>
+                    </div>
+                </div>
+            </div>
+            <div class="col-lg-6">
+                <div class="box-right">
+                    <p class="max-w570 dsn-up mb-15">Working with mostly Anime/semi-realism artworks</p>
+                    <p class="max-w570 dsn-up">I do not draw gore, or any blood related things</p>
+                    <p class="max-w570 dsn-up">I do not draw NSFW or R18 content</p>
+                </div>
+            </div>
+        </div>
+    </div>
 
-                                    </p>
-                                </div>
-                                <div class="col-lg-6">
-                                    <div class="box-left">
-                                        <div class="section-title">
-                                            <h4>Drawing, illustrations and Concept work
-                                            </h4>
-
-                                        </div>
-                                    </div>
-                                </div>
-                                
-                                <div class="col-lg-6">
-                                    <div class="box-right">
-                                        <p class="max-w570 dsn-up mb-15 ">I draw mostly stylised/Anime style illustration including every type</p>
-
-                                        <p class="max-w570 dsn-up">
-                                           I do not draw gore, or any blood related things
-                                        </p>
-                                    </div>
-                                </div>
 <br><br>
 
 <br><br>
@@ -313,7 +310,7 @@
 
                                         <div class="item-resume-box p-relative">
                                             <h4 class="sm-title-block mb-15">Mecha art & realism</h4>
-                                            <h6>I can try on request, can ask if want it, only mecha.</h6>
+                                            <h6>Can be requested</h6>
                                         </div>
                                     </div>
                                 </div>
