--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
 <head>
     
     <!--  Title -->
-   <title>Rudy's Portfolio</title>
+   <title>RUUUUDY's Portfolio</title>
 <!-- Required meta tags -->
     <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
 <meta name="description" content="Home page" />
-<meta name="keyword" content="Art, business, corporate, creative, freelancer,minimal, modern, multipurpose, personal, portfolio, " />
+<meta name="keyword" content="Art, business, creative, freelancer, personal, portfolio, " />
 <meta name="author" content="Rudy's Portfolio" />
 <meta property="og:title" content="Rudy's Portfolio" />
 <meta property="og:description" content="Home page" />
