--- a/index.html
+++ b/index.html
@@ -208,8 +208,8 @@
                                 <div class="folio-item work-item dsn-col-md-2 dsn-col-lg-3 Product column fanart" data-aos="fade-up">
                                     <div class="has-popup box-img before-z-index z-index-0 p-relative over-hidden folio-item__thumb"
                                         data-overlay="0">
-                                        <a class="  folio-item__thumb-link" target=”blank” href="assets\Artworks NEW\MOMO.jpg" title="Moona" data-size="905x1280">
-                                            <img class="cover-bg-img" src="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw==" data-dsn-src="assets\Artworks NEW\MOMO.jpg" alt="">
+                                        <a class="  folio-item__thumb-link " target=”blank” href="assets\Artworks NEW\MOMO.jpg" title="Moona" data-size="905x1280">
+                                            <img class="cover-bg-img " src="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw==" data-dsn-src="assets\Artworks NEW\MOMO.jpg" alt="">
                                            </a>
                                        </div>
    
@@ -255,7 +255,7 @@
                                     </div>
 
                                     <div class="folio-item__info">
-                                        <div class="folio-item__cat">illustration/Commission 2024</div>
+                                        <div class="folio-item__cat">illustration/FanArt 2024</div>
                                         <h4 class="folio-item__title"> Fami!</h4>
                                      </div>
                                      <a target=”blank” href="https://x.com/shirozu07/status/1752175524947128688?s=19" title="Twitter" class="folio-item__project-link">Twitter</a>
@@ -295,7 +295,7 @@
                                     </div>
 
                                     <div class="folio-item__info">
-                                        <div class="folio-item__cat">illustration/Commission 2024</div>
+                                        <div class="folio-item__cat">illustration/FanArt 2024</div>
                                         <h4 class="folio-item__title"> Suisei!</h4>
                                      </div>
                                      <a target=”blank” href="https://x.com/shirozu07/status/1818442110665670686?s=19" title="Twitter" class="folio-item__project-link">Twitter</a>
@@ -335,7 +335,7 @@
                                     </div>
 
                                     <div class="folio-item__info">
-                                        <div class="folio-item__cat">illustration/fanart 2024</div>
+                                        <div class="folio-item__cat">illustration/FanArt 2024</div>
                                         <h4 class="folio-item__title">Jinshi!</h4>
                                      </div>
                                      <a target="Twitter" href="https://x.com/shirozu07/status/1797444769162907717" class="folio-item__project-link">Twitter</a>
@@ -346,7 +346,7 @@
                                 <!-- ========== IMAGE END ========== -->
 
                                  <!-- ========== IMAGE: VAMP ========== -->
-                                 <div class="folio-item work-item mt-80 dsn-col-md-2 dsn-col-lg-3 Product column bikini moona vtube comm" data-aos="fade-up">
+                                 <div class="folio-item work-item mt-80 dsn-col-md-2 dsn-col-lg-3 Product column comm" data-aos="fade-up">
                                     <div class="has-popup box-img before-z-index z-index-0 p-relative over-hidden folio-item__thumb"
                                         data-overlay="0">
                                         <a class="  folio-item__thumb-link" target=”blank” href="assets\Artworks NEW\popup_highres\SeguchiLee - 1bg.png" title="VAMP" data-size="905x1280">
@@ -387,7 +387,7 @@
                                 <!-- ========== IMAGE END ========== -->
 
                                 <!-- ========== IMAGE: DENJI ========== -->
-                                <div class="folio-item work-item mt-80 dsn-col-md-2 dsn-col-lg-3 Product column fanart" data-aos="fade-up">
+                                <div class="folio-item work-item mt-80 dsn-col-md-2 dsn-col-lg-3 Product column male fanart" data-aos="fade-up">
                                     <div class="has-popup box-img before-z-index z-index-0 p-relative over-hidden folio-item__thumb"
                                         data-overlay="0">
                                         <a class="  folio-item__thumb-link" target=”blank” href="assets\Artworks NEW\popup_highres\ChainsawMan_post.png" title="ChainsawMan_post" data-size="905x1280">
@@ -568,7 +568,7 @@
                                 <!-- ========== IMAGE END ========== -->
 
                                  <!-- ========== IMAGE: Moona ========== -->
-                                 <div class="folio-item work-item mt-80 dsn-col-md-2 dsn-col-lg-3 Product column bikini moona vtube" data-aos="fade-up">
+                                 <div class="folio-item work-item mt-80 dsn-col-md-2 dsn-col-lg-3 Product column moona vtube" data-aos="fade-up">
                                     <div class="has-popup box-img before-z-index z-index-0 p-relative over-hidden folio-item__thumb"
                                         data-overlay="0">
                                         <a class="  folio-item__thumb-link" target=”blank” href="assets/img/project/project1/png/moonav2.png" title="Moona" data-size="905x1280">
@@ -627,7 +627,7 @@
 
                                  <!-- ========== IMAGE END ========== -->
                                   
-                                <div class="folio-item work-item mt-80 dsn-col-md-2 dsn-col-lg-3 Product column maki fanart" data-aos="fade-up">
+                                <div class="folio-item work-item mt-80 dsn-col-md-2 dsn-col-lg-3 Product column fanart" data-aos="fade-up">
                                     <div class="has-popup box-img before-z-index z-index-0 p-relative over-hidden folio-item__thumb"
                                         data-overlay="0">
                                         <a class="  folio-item__thumb-link" target=”blank” href="assets/img/project/project1/png/Makima4sh.png" title="Gura" data-size="905x1280">
@@ -646,7 +646,7 @@
  
                                 <!-- ========== IMAGE END ========== -->
 
-                                <div class="folio-item work-item mt-80 dsn-col-md-2 dsn-col-lg-3 Product column bocchi loli fanart" data-aos="fade-up">
+                                <div class="folio-item work-item mt-80 dsn-col-md-2 dsn-col-lg-3 Product column fanart" data-aos="fade-up">
                                     <div class="has-popup box-img before-z-index z-index-0 p-relative over-hidden folio-item__thumb"
                                         data-overlay="0">
                                         <a class="  folio-item__thumb-link" target=”blank” href="assets/img/project/project1/png/bocchi 1.png" title="Bocchi" data-size="905x1280">
@@ -822,7 +822,7 @@
                             </p>
                             <h2 class="section-title title-cap">Pricing and Details</h2>
                             <a target="_blank" href="comminfo.html" class="mt-30 dsn-button image-zoom effect-ajax" data-dsn="parallax">
-                                <span class="dsn-border border-color-reverse-color "></span> Learn More <span>⟶</span>
+                                <span  class="dsn-border border-color-reverse-color "></span> Learn More <span>⟶</span>
                             </a>
                             <br>
 
