--- a/comminfo.html
+++ b/comminfo.html
@@ -202,10 +202,9 @@
                             <p class="sub-heading  line-bg-left mb-15">
                                 Commission status
                             </p>
-                            <h2 class="section-title title-cap">Open! </h2>
-                            <img src="https://media.discordapp.net/attachments/932639937214414908/1076206702053040168/919072185883185202.png?width=86&height=86">
-                            <br>
-                            <p style="font-size: 15px;">1 out of 2 slots remaining, please read the stuff below! and check out the TOS</p>
+                            <h2 class="section-title title-cap">Open! </h2> 
+                            
+                            <p style="font-size: 15px;">1/2 slot available. Check the Terms of Service for pricing and payment details.</p>
                         </div>
 
                        
