"Updated HTML files: about.html, comminfo.html, and index.html with minor changes to links, buttons, and layout."

--- a/about.html
+++ b/about.html
@@ -182,7 +182,7 @@
                                             I love creating art that tells a story and makes people feel something. 
                                             I’m excited to share my journey with you!</p>
 
-                                        <a href="index.html" class="mt-30 dsn-button p-relative dsn-load-animate">
+                                        <a href="index.html" class="mt-30 dsn-button p-relative dsn-load-animate effect-ajax">
                                             <span class="dsn-border-rdu border-color-theme-color"></span>My work
                                         </a>
 
