--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
     </div>
     <!-- ========== End Menu ========== -->
 
-    <main class="main-root" data-dsn-animate="section"
+    <main data-dsn-title="Start" class="main-root" data-dsn-animate="section"
     data-dsn-option='{"slidesPerView":1.5  }' data-dsn-title="toP">
         <div id="dsn-scrollbar">
              <!-- ========== Header Normal ========== -->
