"Removed and rearranged HTML elements in index.html, and updated text in lore.html"

--- a/lore.html
+++ b/lore.html
@@ -38,14 +38,14 @@
     <!-- ========== Loading Page ========== -->
     <div class="preloader">
         <span class="percent">0</span>
-        <span class="loading-text text-uppercase">Buying Cookies ...</span>
+        <span class="loading-text text-uppercase">Checking Documents ...</span>
         <div class="preloader-bar">
             <div class="preloader-progress"></div>
         </div>
 
         <h1 class="title v-middle">
-            <span class="text-strok">RUDY</span>
-            <span class="text-fill">RUDY</span>
+            <span class="text-strok">RUUUDY</span>
+            <span class="text-fill">RUUUDY</span>
         </h1>
     </div>
     <!-- ========== End Loading Page ========== -->
@@ -255,7 +255,7 @@
                         target="_blank"
                         rel="nofollow"
                         href='https://twitter.com/intent/follow?original_referer=https%3A%2F%2Fpublish.twitter.com%2F&screen_name=shirozu07'
-                        >Kiroki Shirozu</a>
+                        >Twitter</a>
 
                                                 </h5>
                                     </div>
