`Update admin-upload.html and netlify.toml to use /api/update-gallery endpoint`

--- a/admin-upload.html
+++ b/admin-upload.html
@@ -61,7 +61,7 @@
                 status.textContent = 'Updating gallery...';
                 status.style.color = 'blue';
 
-                const response = await fetch('/.netlify/functions/update-gallery', {
+                const response = await fetch('/api/update-gallery', { // Updated endpoint
                     method: 'POST',
                     headers: {
                         'Content-Type': 'application/json'
