--- a/admin-upload.html
+++ b/admin-upload.html
@@ -61,7 +61,8 @@
                 status.textContent = 'Updating gallery...';
                 status.style.color = 'blue';
 
-                const response = await fetch('/api/update-gallery', { // Updated endpoint
+                // Use the correct Netlify Function endpoint
+                const response = await fetch('/.netlify/functions/update-gallery', {
                     method: 'POST',
                     headers: {
                         'Content-Type': 'application/json'
@@ -74,13 +75,7 @@
                     })
                 });
 
-                let data;
-                const contentType = response.headers.get('content-type');
-                if (contentType && contentType.includes('application/json')) {
-                    data = await response.json();
-                } else {
-                    throw new Error('Server response was not JSON');
-                }
+                const data = await response.json();
 
                 if (!response.ok) {
                     throw new Error(data.message || 'Failed to update gallery');
