--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
                                         <button type="button" data-filter=".occhara">OC</button>
                                         <button type="button" data-filter=".comm">Commission</button>
                                         <button type="button" data-filter=".male">Male</button>
-                                        <button type="button" data-filter=".landscape">Splash Art</button>
+                                        <button type="button" data-filter=".landscape">Landscape</button>
                                         <button type="button" data-filter=".vtube">Vtubers</button>
 
                                     </div>
