--- a/admin-upload.html
+++ b/admin-upload.html
@@ -42,49 +42,39 @@
         }, (error, result) => {
             if (!error && result && result.event === "success") {
                 const imageUrl = result.info.secure_url;
-                updateGallery(
-                    imageUrl, 
-                    document.getElementById('title').value,
-                    document.getElementById('category').value,
-                    document.getElementById('social_link').value
-                );
-            }
-        });
+                const title = document.getElementById('title').value;
+                const category = document.getElementById('category').value;
+                const socialLink = document.getElementById('social_link').value;
 
-        document.getElementById("upload_widget").addEventListener("click", function() {
-            myWidget.open();
-        }, false);
+                // Create artwork HTML
+                const artworkHTML = `
+                    <div class="folio-item work-item mt-80 dsn-col-md-2 dsn-col-lg-3 Product column ${category}" data-aos="fade-up">
+                        <div class="has-popup box-img before-z-index z-index-0 p-relative over-hidden folio-item__thumb" data-overlay="0">
+                            <a class="folio-item__thumb-link" target="blank" href="${imageUrl}" title="${title}" data-size="905x1280">
+                                <img class="cover-bg-img" src="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw==" data-dsn-src="${imageUrl}" alt="${title}">
+                            </a>
+                        </div>
+                        <div class="folio-item__info">
+                            <div class="folio-item__cat">illustration/${category}</div>
+                            <h4 class="folio-item__title">${title}!</h4>
+                        </div>
+                        <a target="blank" href="${socialLink}" title="Social" class="folio-item__project-link">Social</a>
+                        <div class="folio-item__caption">
+                            <p>${title}</p>
+                        </div>
+                    </div>`;
 
-        async function updateGallery(imageUrl, title, category, socialLink) {
-            try {
-                const status = document.getElementById('upload-status');
-                status.textContent = 'Updating gallery...';
-                status.style.color = 'blue';
-
-                // Use the correct Netlify Function endpoint
-                const response = await fetch('/.netlify/functions/update-gallery', {
-                    method: 'POST',
-                    headers: {
-                        'Content-Type': 'application/json'
-                    },
-                    body: JSON.stringify({
-                        imageUrl,
-                        title,
-                        category,
-                        socialLink
-                    })
-                });
-
-                const data = await response.json();
-
-                if (!response.ok) {
-                    throw new Error(data.message || 'Failed to update gallery');
+                // Add to gallery
+                const gallerySection = document.querySelector('.dsn-isotope');
+                if (gallerySection) {
+                    gallerySection.insertAdjacentHTML('afterbegin', artworkHTML);
                 }
 
                 // Show preview
-                document.getElementById('preview').innerHTML = data.html;
+                document.getElementById('preview').innerHTML = artworkHTML;
                 
                 // Show success message
+                const status = document.getElementById('upload-status');
                 status.textContent = 'Upload successful!';
                 status.style.color = 'green';
                 
@@ -95,13 +85,16 @@
                 if (typeof $().isotope === 'function') {
                     $('.dsn-isotope').isotope('reloadItems').isotope();
                 }
-
-            } catch (error) {
-                console.error('Error:', error);
-                document.getElementById('upload-status').textContent = 'Error: ' + error.message;
-                document.getElementById('upload-status').style.color = 'red';
             }
-        }
+        });
+
+        document.getElementById("upload_widget").addEventListener("click", function() {
+            if (!document.getElementById('title').value) {
+                alert('Please enter a title first');
+                return;
+            }
+            myWidget.open();
+        }, false);
     </script>
 </body>
 </html>
