--- a/admin-upload.html
+++ b/admin-upload.html
@@ -65,7 +65,7 @@
                     </div>`;
 
                 // Add to gallery section in index.html
-                const gallerySection = document.querySelector('.dsn-isotope');
+                const gallerySection = document.getElementById('gallery-section');
                 if (gallerySection) {
                     gallerySection.insertAdjacentHTML('afterbegin', artworkHTML);
 
